force-app/main/default/objects/CalypsoData__c/CalypsoData__c.object-meta.xml
<CustomObject>
    <label>Calypso Data</label>
    <nameField>
        <displayFormat>CD-{00000}</displayFormat>
        <label>CData No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calypso Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>