force-app/main/default/objects/CalypsoData__c/fields/CD_Action__c.field-meta.xml
<CustomField>
    <fullName>CD_Action__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Action</label>
    <length>10</length>
    <type>Text</type>
</CustomField>