force-app/main/default/objects/CalypsoData__c/fields/CD_Banker__c.field-meta.xml
<CustomField>
    <fullName>CD_Banker__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Banker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Calypso Data</relationshipLabel>
    <relationshipName>Calypso_Data</relationshipName>
    <type>Lookup</type>
</CustomField>