force-app/main/default/objects/CalypsoData__c/fields/CD_BaseEquivalent__c.field-meta.xml
<CustomField>
    <fullName>CD_BaseEquivalent__c</fullName>
    <label>Base Equivalent</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>