force-app/main/default/objects/CalypsoData__c/fields/CD_BranchNumber__c.field-meta.xml
<CustomField>
    <fullName>CD_BranchNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>