force-app/main/default/objects/CalypsoData__c/fields/CD_BrokerCode__c.field-meta.xml
<CustomField>
    <fullName>CD_BrokerCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Broker Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>