force-app/main/default/objects/CalypsoData__c/fields/CD_CIF__c.field-meta.xml
<CustomField>
    <fullName>CD_CIF__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer CIF</label>
    <length>50</length>
    <type>Text</type>
</CustomField>