force-app/main/default/objects/CalypsoData__c/fields/CD_Comments__c.field-meta.xml
<CustomField>
    <fullName>CD_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>