force-app/main/default/objects/CalypsoData__c/fields/CD_ConversionStatus__c.field-meta.xml
<CustomField>
    <fullName>CD_ConversionStatus__c</fullName>
    <label>Conversion Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Discarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>