force-app/main/default/objects/CalypsoData__c/fields/CD_CurrencyPair__c.field-meta.xml
<CustomField>
    <fullName>CD_CurrencyPair__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Currency Pair</label>
    <length>32</length>
    <type>Text</type>
</CustomField>