force-app/main/default/objects/CalypsoData__c/fields/CD_Customer__c.field-meta.xml
<CustomField>
    <fullName>CD_Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Calypso Data</relationshipLabel>
    <relationshipName>CalypsoData</relationshipName>
    <type>Lookup</type>
</CustomField>