force-app/main/default/objects/CalypsoData__c/fields/CD_DealExecutedBy__c.field-meta.xml
<CustomField>
    <fullName>CD_DealExecutedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Executed By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Calypso Data (Deal Executed By)</relationshipLabel>
    <relationshipName>CD_DealExecutedBy</relationshipName>
    <type>Lookup</type>
</CustomField>