force-app/main/default/objects/CalypsoData__c/fields/CD_DealType__c.field-meta.xml
<CustomField>
    <fullName>CD_DealType__c</fullName>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FX</fullName>
            </value>
            <value>
                <fullName>FXForward</fullName>
            </value>
            <value>
                <fullName>FXSwap</fullName>
            </value>
            <value>
                <fullName>FXFlexiForward</fullName>
            </value>
            <value>
                <fullName>FXOption</fullName>
            </value>
            <value>
                <fullName>FXNDF</fullName>
            </value>
            <value>
                <fullName>FX Option</fullName>
                <isActive>false</isActive>
                <label>FX Option</label>
            </value>
            <value>
                <fullName>FXForward (for Time Option Take Ups)</fullName>
                <isActive>false</isActive>
                <label>FXForward (for Time Option Take Ups)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>