force-app/main/default/objects/CalypsoData__c/fields/CD_DominantCurrency__c.field-meta.xml
<CustomField>
    <fullName>CD_DominantCurrency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dominant Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>