force-app/main/default/objects/CalypsoData__c/fields/CD_ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>CD_ErrorMessage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Message</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>