force-app/main/default/objects/CalypsoData__c/fields/CD_ETBookingRef__c.field-meta.xml
<CustomField>
    <fullName>CD_ETBookingRef__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ET Booking Ref</label>
    <length>35</length>
    <type>Text</type>
</CustomField>