force-app/main/default/objects/CalypsoData__c/fields/CD_ETRef__c.field-meta.xml
<CustomField>
    <fullName>CD_ETRef__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ET Ref</label>
    <length>35</length>
    <type>Text</type>
</CustomField>