force-app/main/default/objects/CalypsoData__c/fields/CD_ETREUTERSPNL__c.field-meta.xml
<CustomField>
    <fullName>CD_ETREUTERSPNL__c</fullName>
    <label>ET REUTERS PNL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>