force-app/main/default/objects/CalypsoData__c/fields/CD_ETWID__c.field-meta.xml
<CustomField>
    <fullName>CD_ETWID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ET WID</label>
    <length>35</length>
    <type>Text</type>
</CustomField>