force-app/main/default/objects/CalypsoData__c/fields/CD_ForwardValueAdd__c.field-meta.xml
<CustomField>
    <fullName>CD_ForwardValueAdd__c</fullName>
    <label>Forward Value Add</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>