force-app/main/default/objects/CalypsoData__c/fields/CD_FXFarDate__c.field-meta.xml
<CustomField>
    <fullName>CD_FXFarDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FX Far Date</label>
    <type>Date</type>
</CustomField>