force-app/main/default/objects/CalypsoData__c/fields/CD_FXFwdPoints__c.field-meta.xml
<CustomField>
    <fullName>CD_FXFwdPoints__c</fullName>
    <label>FX Fwd Points</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>