force-app/main/default/objects/CalypsoData__c/fields/CD_FXSpotRate__c.field-meta.xml
<CustomField>
    <fullName>CD_FXSpotRate__c</fullName>
    <label>FX Spot Rate</label>
    <precision>18</precision>
    <scale>12</scale>
    <type>Number</type>
</CustomField>