force-app/main/default/objects/CalypsoData__c/fields/CD_HasDuplicate__c.field-meta.xml
<CustomField>
    <fullName>CD_HasDuplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Duplicate</label>
    <type>Checkbox</type>
</CustomField>