force-app/main/default/objects/CalypsoData__c/fields/CD_KapitiCustomer__c.field-meta.xml
<CustomField>
    <fullName>CD_KapitiCustomer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Kapiti Customer</label>
    <length>30</length>
    <type>Text</type>
</CustomField>