force-app/main/default/objects/CalypsoData__c/fields/CD_KapitiLocation__c.field-meta.xml
<CustomField>
    <fullName>CD_KapitiLocation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Kapiti Location</label>
    <length>30</length>
    <type>Text</type>
</CustomField>