force-app/main/default/objects/CalypsoData__c/fields/CD_LegacyCustomer__c.field-meta.xml
<CustomField>
    <fullName>CD_LegacyCustomer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Legacy Customer</label>
    <length>20</length>
    <type>Text</type>
</CustomField>