force-app/main/default/objects/CalypsoData__c/fields/CD_Margin__c.field-meta.xml
<CustomField>
    <fullName>CD_Margin__c</fullName>
    <label>Margin</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>