force-app/main/default/objects/CalypsoData__c/fields/CD_NegotiatedPrice__c.field-meta.xml
<CustomField>
    <fullName>CD_NegotiatedPrice__c</fullName>
    <label>Negotiated Price</label>
    <precision>18</precision>
    <scale>12</scale>
    <type>Number</type>
</CustomField>