force-app/main/default/objects/CalypsoData__c/fields/CD_RDMShortName__c.field-meta.xml
<CustomField>
    <fullName>CD_RDMShortName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RDM Short Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>