force-app/main/default/objects/CalypsoData__c/fields/CD_SecondaryAmount__c.field-meta.xml
<CustomField>
    <fullName>CD_SecondaryAmount__c</fullName>
    <label>Secondary Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>