force-app/main/default/objects/CalypsoData__c/fields/CD_SecondaryCurrency__c.field-meta.xml
<CustomField>
    <fullName>CD_SecondaryCurrency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>