force-app/main/default/objects/CalypsoData__c/fields/CD_SpotCustomerRate__c.field-meta.xml
<CustomField>
    <fullName>CD_SpotCustomerRate__c</fullName>
    <label>Spot Customer Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>