force-app/main/default/objects/CalypsoData__c/fields/CD_SpotMargin__c.field-meta.xml
<CustomField>
    <fullName>CD_SpotMargin__c</fullName>
    <label>Spot Margin</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>