force-app/main/default/objects/CalypsoData__c/fields/CD_StartDate__c.field-meta.xml
<CustomField>
    <fullName>CD_StartDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>