force-app/main/default/objects/CalypsoData__c/fields/CD_TradeDate__c.field-meta.xml
<CustomField>
    <fullName>CD_TradeDate__c</fullName>
    <formula>IF(LEN(CD_TradeDateTime__c)&gt;=8, TRIM(LEFT(CD_TradeDateTime__c, FIND(&quot; &quot;, CD_TradeDateTime__c)-1)), &quot;#Error!&quot;)</formula>
    <label>Trade Date</label>
    <type>Text</type>
</CustomField>