force-app/main/default/objects/CalypsoData__c/fields/CD_TradeDateTime__c.field-meta.xml
<CustomField>
    <fullName>CD_TradeDateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade Date Time</label>
    <length>30</length>
    <type>Text</type>
</CustomField>