force-app/main/default/objects/CalypsoData__c/fields/CD_TradeID__c.field-meta.xml
<CustomField>
    <fullName>CD_TradeID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade ID</label>
    <length>35</length>
    <required>true</required>
    <type>Text</type>
</CustomField>