force-app/main/default/objects/CalypsoData__c/fields/CD_TradeSettleDate__c.field-meta.xml
<CustomField>
    <fullName>CD_TradeSettleDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade Settle Date</label>
    <type>Date</type>
</CustomField>