force-app/main/default/objects/CalypsoData__c/fields/CD_TradeStatus__c.field-meta.xml
<CustomField>
    <fullName>CD_TradeStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade Status</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>