force-app/main/default/objects/CalypsoData__c/fields/CD_TradeTime__c.field-meta.xml
<CustomField>
    <fullName>CD_TradeTime__c</fullName>
    <formula>IF(LEN(CD_TradeDateTime__c)&gt;=12, TRIM(RIGHT(CD_TradeDateTime__c, LEN(CD_TradeDateTime__c) - FIND(&quot; &quot;, CD_TradeDateTime__c))), &quot;#Error!&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trade Time</label>
    <type>Text</type>
</CustomField>