force-app/main/default/objects/CalypsoData__c/fields/CD_TransactionDate__c.field-meta.xml
<CustomField>
    <fullName>CD_TransactionDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>