force-app/main/default/objects/CalypsoData__c/fields/CD_TransactionMonth__c.field-meta.xml
<CustomField>
    <fullName>CD_TransactionMonth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Month</label>
    <length>10</length>
    <type>Text</type>
</CustomField>