force-app/main/default/objects/CalypsoData__c/fields/CD_TransactionTime__c.field-meta.xml
<CustomField>
    <fullName>CD_TransactionTime__c</fullName>
    <label>Transaction Time</label>
    <type>Time</type>
</CustomField>