force-app/main/default/objects/CalypsoData__c/fields/CD_UserAction__c.field-meta.xml
<CustomField>
    <fullName>CD_UserAction__c</fullName>
    <label>User Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Save</fullName>
            </value>
            <value>
                <fullName>Discard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>