force-app/main/default/objects/CalypsoData__c/fields/CD_VAConversionRate__c.field-meta.xml
<CustomField>
    <fullName>CD_VAConversionRate__c</fullName>
    <label>VA Conversion Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>