force-app/main/default/objects/CalypsoData__c/fields/CD_ValueAddCurrency__c.field-meta.xml
<CustomField>
    <fullName>CD_ValueAddCurrency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Value Add Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>