force-app/main/default/objects/CalypsoData__c/fields/CD_WID__c.field-meta.xml
<CustomField>
    <fullName>CD_WID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer WID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>