force-app/main/default/objects/CalypsoData__c/listViews/All_Failed.listView-meta.xml
<ListView>
    <fullName>All_Failed</fullName>
    <columns>NAME</columns>
    <columns>CD_TradeID__c</columns>
    <columns>CD_UserAction__c</columns>
    <columns>CD_ConversionStatus__c</columns>
    <columns>CD_ETRef__c</columns>
    <columns>CD_ETREUTERSPNL__c</columns>
    <columns>CD_ErrorMessage__c</columns>
    <columns>CD_Customer__c</columns>
    <columns>CD_Banker__c</columns>
    <columns>CD_TradeDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CD_ConversionStatus__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <label>All Failed</label>
</ListView>