force-app/main/default/objects/CalypsoData__c/listViews/All_Records_1.listView-meta.xml
<ListView>
    <fullName>All_Records_1</fullName>
    <columns>NAME</columns>
    <columns>CD_TradeID__c</columns>
    <columns>CD_CIF__c</columns>
    <columns>CD_UserAction__c</columns>
    <columns>CD_ConversionStatus__c</columns>
    <columns>CD_ETRef__c</columns>
    <columns>CD_ETREUTERSPNL__c</columns>
    <columns>CD_ErrorMessage__c</columns>
    <columns>CD_Customer__c</columns>
    <columns>CD_Banker__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>