force-app/main/default/objects/CalypsoData__c/listViews/Today_s_Success.listView-meta.xml
<ListView>
    <fullName>Today_s_Success</fullName>
    <columns>NAME</columns>
    <columns>CD_ConversionStatus__c</columns>
    <columns>CD_Customer__c</columns>
    <columns>CD_CustomerFullName__c</columns>
    <columns>CD_WID__c</columns>
    <columns>CD_ETBookingRef__c</columns>
    <columns>CD_DealExecutedBy__c</columns>
    <columns>CD_TradeID__c</columns>
    <columns>CD_TradeDate__c</columns>
    <columns>CD_TradeStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>CD_ConversionStatus__c</field>
        <operation>equals</operation>
        <value>Converted</value>
    </filters>
    <label>Today&#39;s Success</label>
</ListView>